Restructured build system.
- Reworked most of the MSBuild stuff.
- All libraries now target netstandard2.0 and netstandard2.1 (effectively dropping support for .NET Framework versions before 4.6.1).
- Dropped all framework-version-related conditional compilation (not needed anymore).
- DiscId was renamed to dotnet-mbdiscid, targets .NET Core 2.1 and 3.1 (the current LTS releases) and is packaged as a dotnet global tool for easy installation.
- The CoverArt library now references System.Drawing.Common (for RawImage.Decode()).

--- a/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
+++ b/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
@@ -1,25 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\build\NuGetPackage.props" />
-
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45;net40</TargetFrameworks>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <Version>1.0.2-pre</Version>
-    <AssemblyVersion>1.0</AssemblyVersion>
-    <FileVersion>1.0.2</FileVersion>
-    <PackageReleaseNotes/>
-  </PropertyGroup>
-
   <PropertyGroup>
     <Title>MusicBrainz DiscID Library</Title>
     <Description>This package provides classes for accessing information about a CD (its MusicBrainz Disc ID, EAN/ISRC values, CD-TEXT info, ...).</Description>
     <PackageTags>MusicBrainz discid audio cd cd-text isrc upc ean libdiscid</PackageTags>
+    <Version>1.0.2-pre</Version>
+    <PackageReleaseNotes/>
   </PropertyGroup>
 
-  <Import Project="..\build\NuGetPackage.targets" />
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+  </PropertyGroup>
 
 </Project>
