--- a/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
+++ b/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
@@ -7,7 +7,7 @@
     <PackageCopyrightYears>2016-2021</PackageCopyrightYears>
     <PackageRepositoryName>MetaBrainz.MusicBrainz.DiscId</PackageRepositoryName>
     <PackageTags>MusicBrainz discid audio cd cd-text isrc upc ean libdiscid</PackageTags>
-    <Version>3.0.0</Version>
+    <Version>3.0.1-pre</Version>
   </PropertyGroup>
 
   <ItemGroup>
