--- a/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
+++ b/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
@@ -6,10 +6,8 @@
   <PropertyGroup>
     <Authors>Zastai</Authors>
     <Title>MusicBrainz DiscID Library</Title>
-    <Description>
-      This package provides classes for accessing information about a CD (its MusicBrainz Disc ID, EAN/ISRC values,
-      CD-TEXT info, ...).
-    </Description>
+    <!-- This ends up in the assembly attribute exactly as present here _including whitespace and line breaks_! -->
+    <Description>This package provides classes for accessing information about an Audio CD: its MusicBrainz Disc ID, EAN/ISRC values, CD-TEXT info, ...).</Description>
     <PackageCopyrightOwners>Tim Van Holder</PackageCopyrightOwners>
     <PackageCopyrightYears>2016-2025</PackageCopyrightYears>
     <PackageRepositoryName>MetaBrainz.MusicBrainz.DiscId</PackageRepositoryName>
