Drop JetBrains.Annotations dependency
It is only there for convenience when developing (`[PublicAPI]` prevents
the "this stuff isn't used" inspections), so we don't really want it to
be pulled in by code using this library.

So instead, we include just the attributes we actually use, as internal
types.

--- a/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
+++ b/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
@@ -20,7 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" IncludeAssets="compile" PrivateAssets="all" />
+    <!-- Zastai.Build.ApiReference currently includes all internal attributes; explicitly exclude them here. -->
+    <ApiReferenceExcludeAttribute Include="JetBrains.Annotations.PublicAPIAttribute" />
   </ItemGroup>
 
 </Project>
