--- a/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
+++ b/MetaBrainz.MusicBrainz.DiscId/MetaBrainz.MusicBrainz.DiscId.csproj
@@ -12,7 +12,7 @@
     <PackageCopyrightYears>2016-2026</PackageCopyrightYears>
     <PackageRepositoryName>MetaBrainz.MusicBrainz.DiscId</PackageRepositoryName>
     <PackageTags>MusicBrainz discid audio cd cd-text isrc upc ean libdiscid</PackageTags>
-    <Version>5.3.0-pre</Version>
+    <Version>5.3.0</Version>
   </PropertyGroup>
 
   <PropertyGroup>
